finished refactoring the settings page and fixed flicker on pages

--- a/client/cine-vault/src/App.css
+++ b/client/cine-vault/src/App.css
@@ -32,7 +32,7 @@
   --settings-input-bg-color: #333;
   --hover-bg-color: #28293E;
   --button-bg-color: #3700b3;
-  --content-area-bg-color: #2b2b2b;
+  --content-area-bg-color: #2D2E39;
   --title-color: #ffffff;
   --saveprofile-bg-color: #3700b3;
   --search-bar-bg-color: #25262F;
@@ -78,4 +78,17 @@
 
 .modal-text {
   color: var(--text-color);
+}
+.content-area {
+  background-color: var(--content-area-bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.settings-input{
+  background-color: var(--settings-input-bg-color);
+  color: var(--text-color);
+  border: 1px solid var(--hover-bg-color);
+  transition: background-color 0.3s, color 0.3s;
+  
 }
